--- a/display.html
+++ b/display.html
@@ -7,17 +7,30 @@
   <link rel="stylesheet" href="css/style3.css">
 </head>
 <body>
-    <div class="background-container">
-        <img src="img/don.jpg" alt="Donation scene" class="background-image">
-      </div>
-    <div class="button-container">
-        <button class="donation-button food" onclick="location.href='food_dis1.php'">Food</button><br>
-        <button class="donation-button clothes" onclick="location.href='clothe_dis.php'">Clothes</button><br>
+  <div class="background-container">
+    <img src="img/don.jpg" alt="Donation scene" class="background-image">
+  </div>
 
-        <button class="donation-button footwear" onclick="location.href='footwear_dis.php'">Footwear</button>
-        <button class="donation-button fund" onclick="location.href='fund_dis.php'">Fund</button>
-      </div>
-    
+  <div class="button-container">
+    <div class="donation-card food" onclick="location.href='food_dis1.php'">
+      <h2>🍲 Food</h2>
+      <p>Donate meals and groceries to support those in need.</p>
+    </div>
 
-  </body>
+    <div class="donation-card clothes" onclick="location.href='clothe_dis.php'">
+      <h2>👕 Clothes</h2>
+      <p>Share warmth by donating your unused clothes.</p>
+    </div>
+
+    <div class="donation-card footwear" onclick="location.href='footwear_dis.php'">
+      <h2>👟 Footwear</h2>
+      <p>Provide comfort by donating shoes and sandals.</p>
+    </div>
+
+    <div class="donation-card fund" onclick="location.href='fund_dis.php'">
+      <h2>💰 Fund</h2>
+      <p>Support education, healthcare, and welfare with funds.</p>
+    </div>
+  </div>
+</body>
 </html>
