--- a/display.html
+++ b/display.html
@@ -11,25 +11,23 @@
     <img src="img/don.jpg" alt="Donation scene" class="background-image">
   </div>
 
-  <div class="button-container">
+  <header class="page-header">
+    <h1>Choose a Donation Category</h1>
+    <p>Select a category to view available donations</p>
+  </header>
+
+  <div class="button-grid">
     <div class="donation-card food" onclick="location.href='food_dis1.php'">
-      <h2>🍲 Food</h2>
-      <p>Donate meals and groceries to support those in need.</p>
+      🍲 Food
     </div>
-
     <div class="donation-card clothes" onclick="location.href='clothe_dis.php'">
-      <h2>👕 Clothes</h2>
-      <p>Share warmth by donating your unused clothes.</p>
+      👕 Clothes
     </div>
-
     <div class="donation-card footwear" onclick="location.href='footwear_dis.php'">
-      <h2>👟 Footwear</h2>
-      <p>Provide comfort by donating shoes and sandals.</p>
+      👟 Footwear
     </div>
-
     <div class="donation-card fund" onclick="location.href='fund_dis.php'">
-      <h2>💰 Fund</h2>
-      <p>Support education, healthcare, and welfare with funds.</p>
+      💰 Fund
     </div>
   </div>
 </body>
